# plantaznik

./: Cargo.toml  LICENSE  README.md  foo.plantuml
.github/workflows/: plantaznik.yaml  release.yml  rust.yaml  test.yaml
docs/: before-after.plantuml  flow.plantuml  steps.plantuml
src/: cli.rs  encoder.rs  file_manipulator.rs  inliner.rs  main.rs  plantaznik.rs
src/inliner/: replacer.rs
