[package]
name = "plantaznik"
version = "0.1.1"
edition = "2021"
authors = ["Jaroslav Šmolík <grissius@gmail.com>"]
description = "CLI helper for managing PlantUML diagram sources and their previews in Markdown files"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/grissius/plantaznik"
repository = "https://github.com/grissius/plantaznik"
keywords = ["cli", "plantuml", "readme", "encode", "links"]
categories = ["command-line-utilities", "multimedia::images", "encoding", "development-tools::build-utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
env_logger = "0.10.0"
glob = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.17"
plantuml_encoding = "2.0.3"
regex = "1.7.1"
